[340933] - Migrate to new XPath2 API